feat: adding token authentication with jwt
