# src/swagger.json
@@ -19,6 +19,7 @@
         "summary": "Get all profiles",
         "description": "Retrieves a list of all profiles in the system. This endpoint returns detailed information about each profile.",
         "tags": ["Profiles"],
+        "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": {
             "description": "Ok",
@@ -39,6 +40,7 @@
         "summary": "Create a new profile",
         "description": "Creates a new profile with the provided information. This endpoint requires the profile data to be provided in the request body. Returns the newly created profile.",
         "tags": ["Profiles"],
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -95,6 +97,7 @@
         "summary": "Get profile by ID",
         "description": "Fetches detailed information about a specific profile identified by the unique `id`. If the profile with the specified `id` does not exist, the endpoint will return a 404 Not Found error.",
         "tags": ["Profiles"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "name": "id",
@@ -126,6 +129,7 @@
         "summary": "Delete a profile",
         "description": "Deletes a specific profile identified by the unique `id`. If the profile with the specified `id` does not exist, the endpoint will return a 404 Not Found error.",
         "tags": ["Profiles"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "name": "id",
@@ -153,6 +157,7 @@
         "summary": "Update a profile",
         "description": "Updates an existing profile identified by the unique `id`. Only fields provided in the request body will be updated. Returns the updated profile. If the profile with the specified `id` does not exist, the endpoint will return a 404 Not Found error.",
         "tags": ["Profiles"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
             "name": "id",
@@ -391,6 +396,13 @@
           "projects",
           "skills"
         ]
+      }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
     }
   }
